# just-write

./: Cargo.toml  DEVELOPMENT.md  HACKING.md  Makefile  README.md  TODO.md  shell.nix
cli/: Cargo.toml
cli/src/: main.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs  utils.rs
gui/ui/: index.html  main.css  main.js
internals/: Cargo.toml
internals/src/: config.rs  lib.rs  notebooks.rs  search.rs  time.rs
